--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,9 @@ jobs:
       - name: Install dependencies
         run: pip install selenium requests futures eventlet
                 
-      - name: Run iptvzby
+      - name: Run GAT
+        run: python ${{ github.workspace }}/GAT.py
+      - name: Run ZB
         run: python ${{ github.workspace }}/iptv-zb.py
 
 
