--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,10 @@ jobs:
       - name: Install dependencies
         run: pip install selenium requests futures eventlet
                 
-      - name: Run dxZB
-        run: python ${{ github.workspace }}/iptv-dxzb.py
+      # - name: Run DXZB
+      #   run: python ${{ github.workspace }}/iptv-dxzb.py
         
-      - name: Run ltZB
+      - name: Run LTZB
         run: python ${{ github.workspace }}/iptv-ltzb.py
 
          echo "Auto Update 湖南移动组播源 in ${{ steps.date.outputs.date }}" > README.md  
