--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,9 @@ jobs:
                 
       - name: Run DXZB
         run: python ${{ github.workspace }}/DXZB.py
+
+      - name: Run LTZB
+        run: python ${{ github.workspace }}/LTZB.py
         
          echo "Auto Update 湖南电信和联通组播源 in ${{ steps.date.outputs.date }}" > README.md  
          
