--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,7 @@ jobs:
       - name: Run DXZB
         run: python ${{ github.workspace }}/DXZB.py
 
-      - name: Run LTZB
-        run: python ${{ github.workspace }}/LTZB.py
-        
-         echo "Auto Update 湖南电信和联通组播源 in ${{ steps.date.outputs.date }}" > README.md  
+         echo "Auto Update 湖南电信组播源 in ${{ steps.date.outputs.date }}" > README.md  
          
       - name: 提交更改
         run: |
