--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,6 @@ jobs:
           git config --local user.name "mlzlzj"
           git add .
           git commit *.txt -m "Add generated file"
-          git commit *.m3u -m "Add generated file"
+          # git commit *.m3u -m "Add generated file"
           #git pull --rebase
           git push -f
