--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,12 @@ jobs:
 
       - name: Install dependencies
         run: pip install selenium requests futures eventlet
-                
+
+      - name: Run I
+        run: python ${{ github.workspace }}/i.py
+              
       - name: Run ZB
         run: python ${{ github.workspace }}/DXZB.py
-
 
       - name: 提交更改
         run: |
