--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,6 @@ jobs:
           git config --local user.name "mlzlzj"
           git add .
           git commit *.txt -m "Add generated file"
-          git commit *.m3u -m "Add generated file"
+          # git commit *.m3u -m "Add generated file"
           #git pull --rebase
           git push -f
