--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,8 @@ jobs:
           python-version: 3.x
 
       - name: Install dependencies
-        run: pip install selenium requests futures threading random BeautifulSoup playwright 
+        run: |
+          python -m pip install --upgrade pip
               
       - name: Run ZB
         run: python ${{ github.workspace }}/main.py
