--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+      - name: Install bs4
+        run: pip3 install bs4
               
       - name: Run ZB
         run: python ${{ github.workspace }}/main.py
