--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
       - name: Install bs4
-        run: pip3 install playwright
-      - name: Install bs4
+        run: pip3 install bs4
+      - name: Install playwright
         run: pip3 install playwright
               
       - name: Run ZB
