--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Run ZB1
         run: python ${{ github.workspace }}/DXZB.py
         
-      # - name: Run ZB2
-      #   run: python ${{ github.workspace }}/main.py
+      - name: Run ZB2
+        run: python ${{ github.workspace }}/main.py
 
       - name: 提交更改
         run: |
